--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,8 @@ server {
     ssl_certificate /etc/ssl/certs/fullchain.pem;
     ssl_certificate_key /etc/ssl/private/privkey.pem;
 
-    location /scanner {
+    location /scanner/ {
+        rewrite ^/scanner/(.*)$ /$1 break;
         proxy_pass http://server:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
