--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./certs:/etc/ssl/certs
-      - ./certs:/etc/ssl/private
+      - /etc/letsencrypt/live/v2202508293879372462.ultrasrv.de/fullchain.pem:/etc/ssl/certs/fullchain.pem:ro
+      - /etc/letsencrypt/live/v2202508293879372462.ultrasrv.de/privkey.pem:/etc/ssl/private/privkey.pem:ro
     depends_on:
       - server
