--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,11 +1,11 @@
-FROM golang:1.22-alpine AS builder
+FROM golang:1.23-alpine AS builder
 WORKDIR /build
 COPY go.mod go.sum ./
 RUN go mod download
 COPY ./ ./
-RUN CGO_ENABLED=0 GOOS=linux go build -o main
+RUN CGO_ENABLED=0 GOOS=linux go build -a -o main
 
-FROM scratch
+FROM alpine:3.18
 WORKDIR /app
 COPY --from=builder /build/main ./main
 EXPOSE 8080
